# TonieToolbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HOWTO.md  LEGALNOTICE.md  README.md  TECHNICAL.md  TonieToolbox.py  bump_version.py  docker-compose.yml  pyproject.toml  setup.py
.github/workflows/: build-matrix.yml  docker-publish.yml  publish-to-docker.yml  publish-to-pypi.yml
TonieToolbox/: __init__.py  __main__.py  artwork.py  audio_conversion.py  constants.py  dependency_manager.py  filename_generator.py  integration.py  integration_explorer.py  integration_kde.py  integration_windows.py  logger.py  media_tags.py  player.py  player_gui.py  recursive_processor.py  teddycloud.py  tonie_analysis.py  tonies_json.py
tests/data/: test_audio.taf  test_audio_mono.taf
