[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "TonieToolbox"
description = "Create files for the Tonie box and interact with TeddyCloud servers"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
dynamic = ["version"]
authors = [
    {name = "Quentendo64", email = "quentin@wohlfeil.at"}
]
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "protobuf<=3.19.0",
    "requests>=2.32.3",
    "mutagen>=1.47.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
dev = [
    "pylint>=3.3.7",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "twine>=6.1.0",
]
tags = [
    "mutagen>=1.47.0",
]

[project.scripts]
tonietoolbox = "TonieToolbox.__main__:main"

[tool.setuptools]
packages = ["TonieToolbox"]

[tool.setuptools.dynamic]
version = {attr = "TonieToolbox.__version__"}