[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TonieToolbox"
dynamic = ["version"]
description = "Convert audio files to Toniebox compatible format (.TAF) and interact with TeddyCloud."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" }
authors = [
    {name = "Quentendo64", email = "quentin@wohlfeil.at"}
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "protobuf<=6.33.0",
    "requests>=2.32.5",
    "mutagen>=1.47.0",
    "packaging>=25.0",
    "tqdm>=4.67.1"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/Quentendo64/TonieToolbox"
"Bug Tracker" = "https://github.com/Quentendo64/TonieToolbox/issues"

[project.scripts]
tonietoolbox = "TonieToolbox.__main__:main"